@@ -1,6 +1,11 @@
 2018-09-05  Jakub Jelinek  <jakub@redhat.com>
 
 	Backported from mainline
+	2018-08-08  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/86738
+	* g++.dg/opt/pr86738.C: New test.
+
 	2018-08-03  Jason Merrill  <jason@redhat.com>
 
 	PR c++/86706
